Add test for OMIS order page

--- a/src/app/views/_includes/meta-lists/invoice.njk
+++ b/src/app/views/_includes/meta-lists/invoice.njk
@@ -3,5 +3,6 @@
     { label: 'Invoice number', value: invoice.invoice_number },
     { label: 'Created on', value: invoice.created_on, type: 'datetime' },
     { label: 'Paid on', value: order.paid_on, type: 'date' }
-  ]
+  ],
+  dataTest: "invoice"
 }) }}
