--- a/src/app/views/_includes/meta-lists/quote.njk
+++ b/src/app/views/_includes/meta-lists/quote.njk
@@ -10,5 +10,6 @@
     { label: expiryLabel, value: expiryValue if not quote.accepted_on },
     { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' },
     { label: 'Purchase order (PO) number', value: order.po_number }
-  ]
+  ],
+  dataTest: 'quote'
 }) }}
