--- a/src/app/views/_includes/messages/order-paid.njk
+++ b/src/app/views/_includes/messages/order-paid.njk
@@ -1,5 +1,5 @@
 {% call Message({ type: 'info', element: 'div' }) %}
-  <p>Completed work for your order will be sent directly to {{ order.contact_email or 'you by email' }}.</p>
+  <p data-test="completed-text">Completed work for your order will be sent directly to {{ order.contact_email or 'you by email' }}.</p>
 
-  <p>If there are any problems, get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>.</p>
+  <p data-test="problem-text">If there are any problems, get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk" data-test="omis-email">omis.orders@digital.trade.gov.uk</a>.</p>
 {% endcall %}
