--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -49,7 +49,7 @@
         {% endif %}
 
         {% if subHeading %}
-          <p class="local-header__subheading">{{ subHeading }}</p>
+          <p class="local-header__subheading" data-test="subheading">{{ subHeading }}</p>
         {% endif %}
       </header>
     {% endif %}
