Add tests for the payments pages

--- a/src/app/views/_includes/amount-due.njk
+++ b/src/app/views/_includes/amount-due.njk
@@ -16,7 +16,7 @@
 
 {% call Message({ type: 'muted', element: 'div' }) %}
   Amount to pay:
-  <span class="u-block font-large">
+  <span data-test="payment-amount" class="u-block font-large">
     {{ costText | safe }}
   </span>
 {% endcall %}
