--- a/src/app/views/payment/options.njk
+++ b/src/app/views/payment/options.njk
@@ -30,6 +30,6 @@
       error: 'cannot be blank' if invalid
     }) }}
 
-    <button type="submit" class="button">Continue</button>
+    <button data-test="submit-button" type="submit" class="button">Continue</button>
   </form>
 {% endblock %}
