--- a/src/app/views/payment/bank-transfer.njk
+++ b/src/app/views/payment/bank-transfer.njk
@@ -6,7 +6,7 @@
   {% include '_includes/bank-transfer-instructions.njk' %}
 
   <p>
-    <a href="/{{ publicToken }}/invoice">View your invoice</a>
+    <a data-test="invoice-link" href="/{{ publicToken }}/invoice">View your invoice</a>
   </p>
 
   <h3>Can’t pay by bank transfer</h3>
