--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -5,5 +5,5 @@
 {% set heading = 'About this service' %}
 
 {% block main_content %}
-  <p>The Overseas Market Introduction Service (OMIS) can help you find overseas customers using the Department for Business & Trade’s (DBT) network of trade specialists. Find out more about <a href="https://www.gov.uk/overseas-customers-export-opportunities/trade-specialist-help">getting help from a trade specialist</a>.</p>
+  <p class="body">The Overseas Market Introduction Service (OMIS) can help you find overseas customers using the Department for Business & Trade’s (DBT) network of trade specialists. Find out more about <a href="https://www.gov.uk/overseas-customers-export-opportunities/trade-specialist-help" class="link">getting help from a trade specialist</a>.</p>
 {% endblock  %}
