--- a/src/app/views/_includes/messages/general-contact.njk
+++ b/src/app/views/_includes/messages/general-contact.njk
@@ -1,3 +1,3 @@
 {% call Message({ type: 'muted' }) %}
-  Get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>
+  Get in touch with your DBT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk" data-test="omis-orders-email">omis.orders@digital.trade.gov.uk</a>
 {% endcall %}
