--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -40,7 +40,7 @@
       <header class="local-header">
         {% if not hideReturnLink %}
           <p class="local-header__back u-print-hide">
-            <a href="/{{ publicToken }}">View your order history</a>
+            <a href="/{{ publicToken }}" data-test="order-history-link">View your order history</a>
           </p>
         {% endif %}
 
