add tests for the invoice page

--- a/src/app/views/_includes/bank-transfer-instructions.njk
+++ b/src/app/views/_includes/bank-transfer-instructions.njk
@@ -1,4 +1,4 @@
-<p data-test="transfer-heading">Please make your payment in sterling for <strong>{{ order.total_cost | formatCurrency }}</strong> to Department for Business & Trade’s bank account at National Westminster Bank.</p>
+<p data-test="transfer-heading">Please make your payment in sterling for <strong data-test="order-total-cost">{{ order.total_cost | formatCurrency }}</strong> to Department for Business & Trade’s bank account at National Westminster Bank.</p>
 
 <p>
   <span data-test="account-name"><strong>Account Name:</strong> DBT OMIS Service<br></span>
