--- a/src/app/views/_includes/payment-instructions.njk
+++ b/src/app/views/_includes/payment-instructions.njk
@@ -1,6 +1,6 @@
 <p>
   You will need to pay
-  <a href="/{{ publicToken }}/invoice">the invoice</a>
+  <a href="/{{ publicToken }}/invoice" data-test='invoice-link'>the invoice</a>
   by {{ invoice.payment_due_date | formatDate }} ({{ invoice.payment_due_date | fromNow(invoice.overdue) }}{{ ' overdue' if invoice.overdue }}).
 </p>
 
