Apply new linting rules to codebase

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -1,10 +1,10 @@
-@import "components/.example";
-@import "components/button";
-@import "components/confirmation-banner";
-@import "components/local-header";
-@import "components/messages";
-@import "components/meta-list";
+@import 'components/.example';
+@import 'components/button';
+@import 'components/confirmation-banner';
+@import 'components/local-header';
+@import 'components/messages';
+@import 'components/meta-list';
 
-@import "components/form/error-summary";
-@import "components/form/form-group";
-@import "components/form/multiple-choice";
+@import 'components/form/error-summary';
+@import 'components/form/form-group';
+@import 'components/form/multiple-choice';
