--- a/assets/stylesheets/components/_meta-list.scss
+++ b/assets/stylesheets/components/_meta-list.scss
@@ -1,5 +1,5 @@
-@import "../settings";
-@import "../tools";
+@import '../settings';
+@import '../tools';
 
 .c-meta-list__item {
   & + & {
@@ -97,4 +97,3 @@
     }
   }
 }
-
