--- a/assets/stylesheets/objects/_list.scss
+++ b/assets/stylesheets/objects/_list.scss
@@ -1,5 +1,5 @@
-@import "../settings/colours";
-@import "../settings/layout";
+@import '../settings/colours';
+@import '../settings/layout';
 
 .list-unstyled,
 .list-inline {
