--- a/assets/stylesheets/tools/mixins/_addons.scss
+++ b/assets/stylesheets/tools/mixins/_addons.scss
@@ -1,10 +1,10 @@
-@import "../../settings/colours";
-@import "./conditionals";
+@import '../../settings/colours';
+@import './conditionals';
 
 @mixin clearfix {
   &:after {
     clear: both;
-    content: "";
+    content: '';
     display: table;
   }
 }
