--- a/assets/stylesheets/trumps/_layout.scss
+++ b/assets/stylesheets/trumps/_layout.scss
@@ -1,4 +1,4 @@
-@import "../tools/mixins/layout";
+@import '../tools/mixins/layout';
 
 .l-container {
   margin-left: auto;
@@ -43,7 +43,8 @@
     @include bold-font(20);
   }
 
-  h4, h5 {
+  h4,
+  h5 {
     @include bold-font(16);
   }
 
@@ -51,7 +52,11 @@
     margin: 0;
 
     & + {
-      h1, h2, h3, h4, h5 {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5 {
         margin-top: $default-spacing-unit * 2;
       }
     }
@@ -61,7 +66,8 @@
     margin-top: $default-spacing-unit;
   }
 
-  ul, ol {
+  ul,
+  ol {
     padding-left: 1em;
   }
 
