--- a/assets/stylesheets/_settings.scss
+++ b/assets/stylesheets/_settings.scss
@@ -1,3 +1,3 @@
-@import "settings/colours";
-@import "settings/layout";
-@import "settings/typography";
+@import 'settings/colours';
+@import 'settings/layout';
+@import 'settings/typography';
