--- a/assets/stylesheets/_trumps.scss
+++ b/assets/stylesheets/_trumps.scss
@@ -1,5 +1,5 @@
-@import "trumps/utility";
-@import "trumps/layout";
+@import 'trumps/utility';
+@import 'trumps/layout';
 
 // Specific trumps for this app
-@import "trumps/omis";
+@import 'trumps/omis';
