--- a/assets/stylesheets/app.print.scss
+++ b/assets/stylesheets/app.print.scss
@@ -2,24 +2,25 @@ $is-print: true;
 
 a[href^="/"],
 a[href^="http://"],
-a[href^="https://"] {
+a[href^="https://"]
+{
   &:after {
-    content: " (" attr(href) ")";
+    content: ' (' attr(href) ')';
     font-size: 90%;
   }
 }
 
-a[href^="/"]:after {
-  content: " (https://omis.trade.gov.uk/" attr(href) ")";
+a[href^='/']:after {
+  content: ' (https://omis.trade.gov.uk/' attr(href) ')';
   font-size: 90%;
 }
 
-a[href^="javascript:"],
-a[href^="#"],
+a[href^='javascript:'],
+a[href^='#'],
 a.global-header__link {
   &:after {
-    content: "";
+    content: '';
   }
 }
 
-@import "app";
+@import 'app';
