--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -1,11 +1,11 @@
 $is-print: false !default;
-$images-dir: "/images/";
+$images-dir: '/images/';
 
-@import "settings";
-@import "tools";
-@import "generic";
-@import "layout";
-@import "elements";
-@import "objects";
-@import "components";
-@import "trumps";
+@import 'settings';
+@import 'tools';
+@import 'generic';
+@import 'layout';
+@import 'elements';
+@import 'objects';
+@import 'components';
+@import 'trumps';
