--- a/assets/stylesheets/components/_.example.scss
+++ b/assets/stylesheets/components/_.example.scss
@@ -1,5 +1,5 @@
-@import "../settings";
-@import "../tools";
+@import '../settings';
+@import '../tools';
 
 .example__header {
   padding-top: $default-spacing-unit / 4;
