--- a/assets/stylesheets/components/_button.scss
+++ b/assets/stylesheets/components/_button.scss
@@ -1,14 +1,14 @@
-@import "~govuk_frontend_toolkit/stylesheets/design-patterns/buttons";
-@import "../settings/colours";
+@import '~govuk_frontend_toolkit/stylesheets/design-patterns/buttons';
+@import '../settings/colours';
 
 // Buttons
 // ==========================================================================
 
 .button {
-  @include button ($button-colour);
-  padding-bottom: .526315em;
+  @include button($button-colour);
+  padding-bottom: 0.526315em;
 
-  @include media (mobile) {
+  @include media(mobile) {
     width: 100%;
     text-align: center;
   }
@@ -24,19 +24,19 @@
   outline: 3px solid $focus-colour;
 }
 
-.button[disabled="disabled"]:focus {
+.button[disabled='disabled']:focus {
   outline: none;
 }
 
 // modifiers
 .button--secondary {
-  @include button ($grey-2);
-  padding-bottom: .526315em;
+  @include button($grey-2);
+  padding-bottom: 0.526315em;
 }
 
 .button--destructive {
   @include button($red);
-  padding-bottom: .526315em;
+  padding-bottom: 0.526315em;
 }
 
 .button--link {
@@ -45,7 +45,7 @@
   box-shadow: none;
   color: $link-colour;
   cursor: pointer;
-  padding: .4em 0;
+  padding: 0.4em 0;
   text-align: left;
   text-decoration: underline;
 
