--- a/assets/stylesheets/components/_confirmation-banner.scss
+++ b/assets/stylesheets/components/_confirmation-banner.scss
@@ -1,5 +1,5 @@
-@import "../settings/colours";
-@import "../tools";
+@import '../settings/colours';
+@import '../tools';
 
 .confirmation-banner {
   background: $turquoise;
