--- a/assets/stylesheets/components/_local-header.scss
+++ b/assets/stylesheets/components/_local-header.scss
@@ -1,6 +1,5 @@
-
-@import "../settings/colours";
-@import "../tools";
+@import '../settings/colours';
+@import '../tools';
 
 .local-header__back {
   margin-top: -$default-spacing-unit;
