--- a/assets/stylesheets/components/form/_error-summary.scss
+++ b/assets/stylesheets/components/form/_error-summary.scss
@@ -1,4 +1,4 @@
-@import "../../tools";
+@import '../../tools';
 
 .c-error-summary__heading,
 .c-error-summary__list,
@@ -52,4 +52,3 @@
     margin-top: $default-spacing-unit;
   }
 }
-
