--- a/assets/stylesheets/objects/base/_global-footer.scss
+++ b/assets/stylesheets/objects/base/_global-footer.scss
@@ -1,12 +1,12 @@
-@import "../../settings/colours";
-@import "../../settings/typography";
-@import "../../tools/mixins";
+@import '../../settings/colours';
+@import '../../settings/typography';
+@import '../../tools/mixins';
 
 .global-footer {
   background-color: $grey-3;
   border-top: 1px solid $grey-2;
   color: $grey-1;
-  font-size: .9em;
+  font-size: 0.9em;
 
   a {
     color: inherit;
