--- a/assets/stylesheets/tools/_mixins.scss
+++ b/assets/stylesheets/tools/_mixins.scss
@@ -1,3 +1,3 @@
-@import "mixins/conditionals";
-@import "mixins/layout";
-@import "mixins/typography";
+@import 'mixins/conditionals';
+@import 'mixins/layout';
+@import 'mixins/typography';
